14410
on August 3rd Martin O wrote on the scala list:
{code}
The wrapper for :: is actually in the scala package object, not
in Predef. I have put another one fdor #:: in he same place
now, so extractors should work with tomorrows nightly. Thanks
for the suggestion.
{code}

it's a few tomorrows later, but:
{code}
Welcome to Scala version 2.8.0.r18448-b20090806082019 (Java HotSpot(TM) Client VM, Java 1.5.0_20).
Type in expressions to have them evaluated.
Type :help for more information.

scala> 1 #:: Stream.empty
res0: scala.collection.immutable.Stream[Int] = Stream(1, ?)

scala> res0 match { case 1 #:: xs => xs }
<console>:6: error: not found: value #::
       res0 match { case 1 #:: xs => xs }
                           ^
<console>:6: error: not found: value xs
       res0 match { case 1 #:: xs => xs }
                                     ^
{code}

...maybe just forgot to actually check it in...?
